--- a/templates/base.html
+++ b/templates/base.html
@@ -30,19 +30,19 @@
         <div class="nav-container">
             <div class="flex items-start gap-6">
                 <!-- Logo on the left -->
-                <img src="{% static 'img/logo.png' %}" alt="Logo" style="height:87px;width:240px;" class="object-contain flex-shrink-0">
+                    <img src="{% static 'img/logo.png' %}" alt="Logo" class="object-contain flex-shrink-0 logo-small">
                 <!-- Title, navigation, and user info stacked vertically -->
                 <div class="flex flex-col gap-2">
                     <h1 class="text-xl font-bold nav-link">Smart Registration Services</h1>
                     {% if user.is_authenticated %}
                         <div class="flex gap-6">
-                            <a href="{% url 'admin:index' %}" class="nav-link">Dashboard</a>
+                            <a href="{% url 'home' %}" class="nav-link">Dashboard  |</a>
                             {% if user.is_student %}
-                                <a href="#" class="nav-link">My Courses</a>
-                                <a href="#" class="nav-link">Plan Schedule</a>
+                                <a href="{% url 'registration:register' %}" class="nav-link">My Courses  |</a>
+                                <a href="{% url 'planning:schedule' %}" class="nav-link">Plan Schedule</a>
                             {% endif %}
                             {% if user.is_advisor %}
-                                <a href="#" class="nav-link">Student Plans</a>
+                                <a href="#" class="nav-link">Student Plans  |</a>
                                 <a href="#" class="nav-link">Messages</a>
                             {% endif %}
                         </div>
